--- a/arch/arm64/configs/lmi_defconfig
+++ b/arch/arm64/configs/lmi_defconfig
@@ -151,6 +151,10 @@ CONFIG_INET_ESP=y
 CONFIG_INET_IPCOMP=y
 CONFIG_INET_UDP_DIAG=y
 CONFIG_INET_DIAG_DESTROY=y
+CONFIG_TCP_CONG_ADVANCED=y
+CONFIG_DEFAULT_BBR2=y
+CONFIG_TCP_CONG_BBR=y
+CONFIG_TCP_CONG_BBR2=y
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_IPV6_ROUTE_INFO=y
 CONFIG_IPV6_OPTIMISTIC_DAD=y
@@ -825,4 +829,3 @@ CONFIG_NET_SCH_FQ_CODEL=y
 CONFIG_NET_SCH_DEFAULT=y
 CONFIG_DEFAULT_FQ_CODEL=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
-
