--- a/drivers/kernelsu/Kconfig
+++ b/drivers/kernelsu/Kconfig
@@ -2,8 +2,7 @@ menu "KernelSU"
 
 config KSU
 	tristate "KernelSU function support"
-	select OVERLAY_FS
-	default n
+	depends on OVERLAY_FS
 	help
 	Enable kernel-level root privileges on Android System.
 
