--- a/arch/arm64/configs/munch_defconfig
+++ b/arch/arm64/configs/munch_defconfig
@@ -55,7 +55,8 @@ CONFIG_PERF_EVENTS=y
 CONFIG_HOTPLUG_SIZE_BITS=29
 CONFIG_ARCH_QCOM=y
 CONFIG_ARCH_KONA=y
-# CONFIG_AUDIT is not set
+CONFIG_AUDIT=y
+CONFIG_AUDITSYSCALL=y
 CONFIG_PCI=y
 CONFIG_PCI_MSM=y
 CONFIG_PCI_MSM_MSI=y
